--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "author": "Joe Staller",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "node-localstorage": "^1.3.0"
   }
